--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,17 @@
 [profile.default]
+solc = "0.8.24"
 src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+remappings = [
+  "forge-std/=lib/forge-std/src/",
+  "@chainlink/contracts-ccip/contracts/=lib/chainlink-ccip/chains/evm/contracts/",
+  "@chainlink/contracts/=lib/chainlink-evm/contracts/",
+  "@openzeppelin/contracts@5.0.2/utils/introspection/=lib/forge-std/src/interfaces/"
+]
+
+# RPC URLs will be fed to our script via Foundry's config file
+[rpc_endpoints]
+sepolia = "https://sepolia.infura.io/v3/89fbdbed48754cdc9bc2d473729fc0dd"
+fuji = "https://api.avax-test.network/ext/bc/C/rpc"
