--- a/foundry.toml
+++ b/foundry.toml
@@ -1,17 +1,37 @@
 [profile.default]
-solc = "0.8.24"
-src = "src"
-out = "out"
-libs = ["lib"]
+src     = "src"
+out     = "out"
+libs    = ["lib"]
+test    = "test"
+script  = "script"
+
+solc_version   = "0.8.33"
+optimizer      = true
+optimizer_runs = 200
+via_ir         = false
+
+fuzz.runs      = 256
+verbosity      = 2
 
 remappings = [
-  "forge-std/=lib/forge-std/src/",
-  "@chainlink/contracts-ccip/contracts/=lib/chainlink-ccip/chains/evm/contracts/",
-  "@chainlink/contracts/=lib/chainlink-evm/contracts/",
-  "@openzeppelin/contracts@5.0.2/utils/introspection/=lib/forge-std/src/interfaces/"
+    "forge-std/=lib/forge-std/src/",
+    "@chainlink/contracts-ccip/contracts/=lib/chainlink-ccip/chains/evm/contracts/",
+    "@chainlink/contracts/=lib/chainlink-evm/contracts/",
+    "@chainlink/local/=lib/chainlink-local/src/",
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
 ]
 
-# RPC URLs will be fed to our script via Foundry's config file
 [rpc_endpoints]
-sepolia = "https://sepolia.infura.io/v3/89fbdbed48754cdc9bc2d473729fc0dd"
-fuji = "https://api.avax-test.network/ext/bc/C/rpc"
+sepolia     = "${ETHEREUM_SEPOLIA_RPC_URL}"
+amoy        = "${POLYGON_AMOY_RPC_URL}"
+anvil       = "http://localhost:8545"
+
+[etherscan]
+sepolia     = { key = "${ETHERSCAN_API_KEY}", chain = "sepolia" }
+
+[profile.ci]
+fuzz.runs = 1000
+verbosity = 3
+
+[profile.lite]
+optimizer_runs = 1
