--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,7 @@ script  = "script"
 solc_version   = "0.8.33"
 optimizer      = true
 optimizer_runs = 200
-via_ir         = false
+via_ir         = true
 
 fuzz.runs      = 256
 verbosity      = 2
