--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 cache/
 out/
 
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+# Broadcast artifacts
+/broadcast/
 
 # Docs
 docs/
@@ -14,5 +12,5 @@ idea.txt
 MESSAGES.MD
 FOUNDRY.MD
 .env
-broadcast/
 token-verification.txt
+deployments/
